--- a/ios/hintmeinx/Info.plist
+++ b/ios/hintmeinx/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>roboto_bold.ttf</string>
+		<string>roboto_light.ttf</string>
+		<string>roboto_medium.ttf</string>
+		<string>roboto.ttf</string>
+	</array>
 </dict>
 </plist>
