--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "3.4.0",
     "react": "17.0.1",
     "react-native": "0.64.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-svg": "^12.1.1"
   },
