--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "nanoid": "^4.0.1",
     "native-base": "3.4.0",
     "react": "17.0.1",
     "react-native": "0.64.4",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-svg": "^12.1.1"
@@ -26,6 +28,7 @@
     "@types/react-native": "^0.64.5",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/uuid": "^9.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
