--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.4",
     "react-native-get-random-values": "^1.8.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-svg": "^12.1.1"
   },
