--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
